// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepIndemnite /> should render cdd indemnite 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c3 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c4 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c5 {
  font-size: 1.4rem;
}

.c6 {
  margin: 1.6rem 0;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c1"
    >
      2000
       €
    </strong>
    .
  </p>
  <div
    class="c2"
  >
    Un accord d’entreprise peut prévoit un montant différent qu’il soit plus élevé ou plus faible. Dans ce cas, s’applique le montant prévu par l’accord d’entreprise, sauf si le contrat de travail prévoit un montant plus favorable pour le salarié.
  </div>
  <h2
    class="c0"
  >
    Détails du calcul
  </h2>
  <strong
    class="c3"
  >
    Éléments saisis :
  </strong>
  <ul
    class="c4"
  >
    <li
      class="c5"
    >
      somme des salaires
       : 
      20000
    </li>
  </ul>
  <strong
    class="c3"
  >
    Calcul :
  </strong>
  <div
    class="c6"
  >
    <div
      id="react-mathjax-preview"
    >
      <div
        id="react-mathjax-preview-result"
      >
        \`10/100 * somme(salaires)\`
      </div>
    </div>
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-8 du code du travail"
      >
        Article L1243-8 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-9 du code du travail"
      >
        Article L1243-9 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-8 du code du travail"
      >
        Article L1243-8 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-9 du code du travail"
      >
        Article L1243-9 du code du travail
      </a>
    </li>
  </ul>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render ctt indemnite 1`] = `
.c2 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c3 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c4 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c5 {
  font-size: 1.4rem;
}

.c6 {
  margin: 1.6rem 0;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Montant
  </h2>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c1"
    >
      300
       €
    </strong>
    .
  </p>
  <div
    class="c2"
  >
    Un accord d’entreprise peut prévoit un montant différent qu’il soit plus élevé ou plus faible. Dans ce cas, s’applique le montant prévu par l’accord d’entreprise, sauf si le contrat de travail prévoit un montant plus favorable pour le salarié.
  </div>
  <h2
    class="c0"
  >
    Détails du calcul
  </h2>
  <strong
    class="c3"
  >
    Éléments saisis :
  </strong>
  <ul
    class="c4"
  >
    <li
      class="c5"
    >
      total des salaires
       : 
      3000
    </li>
  </ul>
  <strong
    class="c3"
  >
    Calcul :
  </strong>
  <div
    class="c6"
  >
    <div
      id="react-mathjax-preview"
    >
      <div
        id="react-mathjax-preview-result"
      >
        \`10/100 * "totalSalaires"\`
      </div>
    </div>
  </div>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-8 du code du travail"
      >
        Article L1243-8 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-9 du code du travail"
      >
        Article L1243-9 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-8 du code du travail"
      >
        Article L1243-8 du code du travail
      </a>
    </li>
    <li>
      <a
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l1243-9 du code du travail"
      >
        Article L1243-9 du code du travail
      </a>
    </li>
  </ul>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/contrat-de-travail-temporaire-interim"
      rel="noopener noreferrer"
      target="_blank"
    >
      salarié en contrat de travail temporaire (contrat d’intérim)
    </a>
  </p>
</div>
`;
